[gd_scene load_steps=5 format=3 uid="uid://btmiqb1tewbe5"]

[ext_resource type="Texture2D" uid="uid://7ympmf8u77u0" path="res://sprites/Untitled64_20240516114802.png" id="1_n1r7d"]
[ext_resource type="Script" path="res://TEST.gd" id="1_w2kk2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0mn6"]
bg_color = Color(0, 0, 0, 0.67451)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h58k"]
bg_color = Color(0, 0, 0, 0.552941)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w2kk2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2789.0
offset_bottom = 1306.0
texture = ExtResource("1_n1r7d")
expand_mode = 1

[node name="LineEdit" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 1333.0
offset_top = 1022.0
offset_right = 2222.0
offset_bottom = 1153.0

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 1283.0
offset_top = 94.0
offset_right = 2619.0
offset_bottom = 975.0
theme_override_styles/focus = SubResource("StyleBoxFlat_b0mn6")
theme_override_styles/normal = SubResource("StyleBoxFlat_4h58k")

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 2253.0
offset_top = 1031.0
offset_right = 2575.0
offset_bottom = 1140.0
text = "SEND
"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="button_down" from="TextureRect/Button" to="." method="_on_button_button_down"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
